# methylVA

./: .gitignore  241018_m1_v2_hm450k_convergence_plots.ipynb  241018_m1_v2_hm450k_save_subset.ipynb  README.md  VAE_toy_data.ipynb  m1_toy_data.ipynb  m1_v2_hm450k.ipynb  pyproject.toml  run_pipeline.py  split_data.py  train_m1_vae.py  train_v2_m1_vae_sub_data.py
methylVA/configs/: config_data.yaml  config_hv_cpg_selection.yaml  config_random_data_generation.yaml  config_vae_hv_cpg.yaml  config_vae_random.yaml  random_data_config.yaml  random_data_zero_config.yaml  set_seeds.py
methylVA/data_processing/: dataset.py  preprocessing.py  scaling.py  split_data.py  utils.py
methylVA/models/: vae.py  (+4 more)
notebooks/: 241018_m1_v2_hm450k_train_models.ipynb  241022_random_data.ipynb  241023_for_test_m1_toy_data.ipynb  241023_random_data_zero.ipynb  241024_random_data_zero.ipynb  241028_mnist-VAE-gaussian_noise.ipynb  241028_mnist-VAE-uniform_noise.ipynb  241028_mnist-VAE.ipynb  241029_mnist-AE-gaussian_noise.ipynb  241029_mnist-AE-uniform_noise.ipynb  241029_mnist-AE.ipynb  241031_m1_v2_hm450k_dim_red_HVcpg.ipynb  241031_mnist-VAE_lat_20.ipynb  241101_mnist-VAE-gaussian_noise_lat_2.ipynb  241105_random_data_generate_m1_v2.ipynb  241106_mnist-VAE-methyl_data_0.05.ipynb  241106_mnist-VAE-methyl_data_0.1.ipynb  241106_mnist-VAE-methyl_data_0.1_hidden_1024.ipynb  241106_mnist-VAE-random_data_0.05.ipynb  241106_mnist-VAE-random_data_0.1.ipynb  241106_random_data_generate_m1_v2.ipynb  Untitled.ipynb  m1_v2_hm450k.ipynb
scripts/: create_subsets.py  generate_random.py  select_HV_cpgs.py
(+25 files in other folders)
