[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methylVA"
version = "0.1.0"
description = "A python package for diseases classification based on methylation data using VAE to embed the high dimensions of data and classify them using a MLP. "
readme = "README.md"
requires-python = ">=3.10"
# license = {file = "LICENSE.txt"}

authors = [
    {name = "Ehsan Karimiara", email = "e.karimiara@gmail.com" }
    ]

dependencies = [
    # "torch >= 1.0",
    "numpy"
    ]

[tool.setuptools]
packages = ["methylVA"]
# package-dir = {"" = "methylVA"}  # Correctly formatted dictionary, no trailing comma
# packages = { find = { "where": ["methylVA"] } }  # Correctly formatted dictionary

